<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.oocl.ita</groupId>
  <artifactId>gallery</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>gallery</name>
  <packaging>war</packaging>
  <description>Demo project for Spring Boot</description>

  <properties>
    <java.version>1.8</java.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <!-- 注意此处的url,它的值就是第一步中的tomcat发布应用管理页面地址 -->
          <url>http://127.0.0.1:8080/manager/text</url>
          <server>tomcat7</server> <!-- 此处的名字必须和setting.xml中配置的ID一致 -->
          <username>admin</username>
          <password>admin</password>
          <path>/gallery</path>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
        <configuration>
          <argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=256m</argLine>
          <forkMode>once</forkMode>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>